@@ -20,7 +20,7 @@
     <parent>
         <groupId>com.okta.idx.sdk</groupId>
         <artifactId>okta-idx-java-samples</artifactId>
-        <version>0.1.0-beta.7-SNAPSHOT</version>
+        <version>0.1.0-beta.8-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -33,7 +33,6 @@
         <checkstyle-maven-plugin.version>3.1.2</checkstyle-maven-plugin.version>
         <spring.boot.version>2.4.0</spring.boot.version>
         <java.version>1.8</java.version>
-        <com.okta.idx.sdk.version>0.1.0-beta.6</com.okta.idx.sdk.version>
         <okta.sdk.api.version>4.0.0</okta.sdk.api.version>
     </properties>
 
@@ -53,7 +52,6 @@
         <dependency>
             <groupId>com.okta.idx.sdk</groupId>
             <artifactId>okta-idx-java-api</artifactId>
-            <version>${com.okta.idx.sdk.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -268,6 +266,12 @@
                                 </configuration>
                             </execution>
                         </executions>
+                        <configuration>
+                            <trimStackTrace>false</trimStackTrace>
+                            <reuseForks>true</reuseForks>
+                            <forkCount>1</forkCount>
+                            <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+                        </configuration>
                     </plugin>
                     <plugin>
                         <groupId>org.springframework.boot</groupId>
